DONE: Add border to ehaders to prevent flickering

--- a/src/app/scheduler-v2/scheduler/scheduler.component.css
+++ b/src/app/scheduler-v2/scheduler/scheduler.component.css
@@ -38,6 +38,12 @@ td:not(:first-of-type){
   overflow: hidden;
 }
 
+th{
+  text-align: center;
+  border: 1px solid rgb(70, 70, 70);
+  overflow: hidden;
+}
+
 td:not(:first-of-type):hover{
   overflow: visible;
 }
